# serializer version: 1
# name: test_time_entities[time.my_super_test_player_2_sleep_timer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.my_super_test_player_2_sleep_timer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sleep timer',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sleep timer',
    'platform': 'music_assistant',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sleep_timer',
    'unique_id': '00:00:00:00:00:02',
    'unit_of_measurement': None,
  })
# ---
# name: test_time_entities[time.my_super_test_player_2_sleep_timer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'My Super Test Player 2 Sleep timer',
    }),
    'context': <ANY>,
    'entity_id': 'time.my_super_test_player_2_sleep_timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_time_entities[time.test_group_player_1_sleep_timer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.test_group_player_1_sleep_timer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sleep timer',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sleep timer',
    'platform': 'music_assistant',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sleep_timer',
    'unique_id': 'test_group_player_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_time_entities[time.test_group_player_1_sleep_timer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Group Player 1 Sleep timer',
    }),
    'context': <ANY>,
    'entity_id': 'time.test_group_player_1_sleep_timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_time_entities[time.test_player_1_sleep_timer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.test_player_1_sleep_timer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sleep timer',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sleep timer',
    'platform': 'music_assistant',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sleep_timer',
    'unique_id': '00:00:00:00:00:01',
    'unit_of_measurement': None,
  })
# ---
# name: test_time_entities[time.test_player_1_sleep_timer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Player 1 Sleep timer',
    }),
    'context': <ANY>,
    'entity_id': 'time.test_player_1_sleep_timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
